# taxator-tk

./: CHANGELOG  CHANGELOG.md  CMakeLists.txt  Changelog.txt  Makefile  README  README.md  README.mkd  USAGE.md  USAGE.mkd  acc2taxid.cpp  alignments-filter.cpp  alignments-prefilter-training.cpp  alignments-prefilter.cpp  binner.cpp  binner_new.cpp  binning_merger.cpp  build.sh  conbinner.cpp  converter.cpp  extract-fastacomment-ncbifield.cpp  name-filter.cpp  opbinner.cpp  prediction-error.cpp  prediction2distances.cpp  predictions-filter.cpp  predictor.cpp  rank-filter.cpp  releasefiles.txt  taxator-tk.doxygen  taxator-tk.kdev4  taxator.cpp  taxknife.cpp  unittest_ncbitaxonomy.cpp
contrib/: README.md  download-verify.sh  download.tsv
core/: .gitignore  BUILD.md  CMakeLists.txt  DEPENDENCIES.md  alignments-filter.cpp  binner.cpp  build.sh  taxator.cpp  taxknife.cpp
core/includes-external/zstr/: zstr.hh
core/src/: accessconv.hh  bioboxes.hh  boundedbuffer.hh  concurrentoutstream.hh  constants.hh  faidx.h  fastnodemap.hh  fileparser.hh  ncbidata.cpp  predictionranges.hh  predictionrecord.cpp  predictionrecord.hh  sequencestorage.hh  taxonfilter.hh  taxonomyinterface.cpp  taxonpredictionmodelsequence.hh  taxontree.hh  types.hh  utils.hh
doc/: fileformats.md
extended/: .gitignore  CHANGELOG  DEPENDENCIES.md  README  README.md  binning-blast-protein.bash  binning-blast.bash  binning-last.bash  index-blast-protein.bash  index-blast.bash  index-blast.sh  index-last.bash  index-last.sh  show-versions.bash
extended/lib/: KronaTools.pm  common.sh
extra/: alignments2blasttab  fasta-strip-identifier  map-alignments-prot-dna.py  taxatortk.py
includes-external/seqan/align/: global_alignment_myers_hirschberg_impl.h
includes-external/seqan3/submodules/sdsl-lite/include/sdsl/: cereal.hpp
licenses/: sqlite3pp license.txt
src/: accessconv.cpp  accessconv.hh  alignmentrecord.cpp  alignmentrecord.hh  alignmentsfilter.hh  bioboxes.cpp  bioboxes.hh  boundedbuffer.hh  concurrentoutstream.hh  constants.hh  exception.hh  fileparser.hh  losses.hh  ncbidata.cpp  ncbidata.hh  nestedmap.hh  ostreamtwrapperts.hh  predictionranges.cpp  predictionranges.hh  predictionrecord.cpp  predictionrecord.hh  predictionrecordbinning.hh  profiling.hh  sequencestorage.cpp  sequencestorage.hh  sqlite3pp.cpp  sqlite3pp.hh  taxonfilter.hh  taxonomyinterface.cpp  taxonomyinterface.hh  taxonprediction.cpp  taxonprediction.hh  taxonpredictionmodel.cpp  taxonpredictionmodel.hh  taxonpredictionmodelsequence.cpp  taxonpredictionmodelsequence.hh  taxontree.cpp  taxontree.hh  trainingrecord.cpp  trainingrecord.hh  (+3 more)
taxator-tk_core/: taxator.cpp
taxator-tk_core/src/: accessconv.cpp  ncbidata.hh  predictionrecord.cpp  sequencestorage.hh  taxonpredictionmodel.hh  taxontree.cpp
taxator-tk_extended/: README  binning-last.bash  index-last.sh
taxator-tk_extended/lib/: KronaTools.pm  common.sh
trunk/: CMakeLists.txt  trunk.kdev4
